ebuy-ssr/apps/home/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: home
 namespace: default
 labels:
  app: home
spec:
 replicas: 1
 selector:
  matchLabels:
    app: home
 template:
  metadata:
 labels:
    app: home
 spec:
 containers:
  - name: home
  image: <dockerUserID>/ebuy-home:latest
  imagePullPolicy: Always
  ports:
    - name: http
    containerPort: 3000
    protocol: TCP
