ebuy-ssr/apps/home/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
 name: home
 namespace: default
 labels:
  app: home
spec:
 type: LoadBalancer
 selector:
  app: home
 ports:
 - protocol: TCP
    port: 80
    targetPort: 3000
    name: home
